--- a/index.html
+++ b/index.html
@@ -1,35 +1,58 @@
-<table>
-  <caption>
-    What is the difference between block, inline and inline-block
-  </caption>
-  <thead>
-    <tr>
-      <th>/</th>
-      <th>block</th>
-      <th>inline</th>
-      <th>inline-block</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th>height determined</th>
-      <td colspan="3">by height of content</td>
-    </tr>
-    <tr>
-      <th>width determined</th>
-      <td>by width of parent element</td>
-      <td colspan="2">by width of content</td>
-    </tr>
-    <tr>
-      <th>Is it possible to set height and width</th>
-      <td>yes</td>
-      <td>no</td>
-      <td>yes</td>
-    </tr>
-    <tr>
-      <th>How line wrapping works</th>
-      <td>always on a new line</td>
-      <td colspan="2">only when filling the width of the parent element</td>
-    </tr>
-  </tbody>
-</table>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
+
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body>
+    <div class="variable-width slider">
+      <div class="slider-kard">
+        <img src="./img/1.jpg" width="476" height="684" />
+        <p class="slider-txt">Доброго ранку Україно!</p>
+      </div>
+      <div class="slider-kard">
+        <img src="./img/2.jpg" width="476" height="684" />
+        <p class="slider-txt">Доброго ранку Україно!</p>
+      </div>
+      <div class="slider-kard">
+        <img src="./img/3.jpg" width="476" height="684" />
+        <p class="slider-txt">Доброго ранку Україно!</p>
+      </div>
+      <div class="slider-kard">
+        <img src="./img/4.jpg" width="476" height="684" />
+        <p class="slider-txt">Доброго ранку Україно!</p>
+      </div>
+      <div class="slider-kard">
+        <img src="./img/5.jpg" width="476" height="684" />
+        <p class="slider-txt">Доброго ранку Україно!</p>
+      </div>
+      <div class="slider-kard">
+        <img src="./img/6.jpg" width="476" height="684" />
+        <p class="slider-txt">Доброго ранку Україно!</p>
+      </div>
+      <div class="slider-kard">
+        <img src="./img/7.jpg" width="476" height="684" />
+        <p class="slider-txt">Доброго ранку Україно!</p>
+      </div>
+    </div>
+    
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+  
+    <script src="./js/slider.js"></script>
+  </body>
+</html>
